Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -10,7 +10,7 @@
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-208-1-.svg",
   "name": "MacPremier",
-  "short_name": "MacPremier® Technologies",
+  "short_name": "MacPremier Lite",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
