--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "_",
     "custom": "_"
   },
-  "bg_color": "#d9d9d9",
+  "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-208-1-.svg",
   "name": "MacPremier",
@@ -22,5 +22,5 @@
   "icon": "/img/uploads/app-1-.png",
   "store_id": 19130,
   "description": "A MacPremier® Technology é uma das maiores especializadas em produtos Apple do país, onde você encontra todos os lançamentos e a linha completa de produtos Apple.  Devido, principalmente, a um novo sistema de logística a MacPremier é capaz de criar ofertas mais competitivas e atrativas, tornando produtos de alto padrão mais acessíveis ao bolso do brasileiro.",
-  "large_icon": "/img/uploads/app-1-.png"
+  "large_icon": "/img/uploads/icone-grande.png"
 }
