Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-210.png",
-  "name": "MacPremier",
+  "name": "Plaza Premier",
   "short_name": "MacPremier Lite",
   "lang": "pt_br",
   "currency": "BRL",
