Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#4f4f4f",
   "icon": "/img/uploads/icone-do-app.png",
   "store_id": 19130,
-  "description": "A MacPremier® Technology é uma das maiores especializadas em produtos Apple do país, onde você encontra todos os lançamentos e a linha completa de produtos Apple.  Devido, principalmente, a um novo sistema de logística a MacPremier é capaz de criar ofertas mais competitivas e atrativas, tornando produtos de alto padrão mais acessíveis ao bolso do brasileiro.",
+  "description": "A PlazaPremier® Technology é uma das maiores especializadas em produtos Apple do país, onde você encontra todos os lançamentos e a linha completa de produtos Apple.  Devido, principalmente, a um novo sistema de logística a Plaza Premier é capaz de criar ofertas mais competitivas e atrativas, tornando produtos de alto padrão mais acessíveis ao bolso do brasileiro.",
   "large_icon": "/img/uploads/icone-grande-1-.png"
 }
