--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "https://www.macpremier.com.br/",
+  "domain": "www.macpremier.com.br",
   "currency_symbol": "R$",
   "primary_color": "#f1f1f1",
   "theme": {
