--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-222-3-.png",
+  "logo": "/img/uploads/900-x-222-1-.svg",
   "name": "Plaza Premier",
   "short_name": "MacPremier Lite",
   "lang": "pt_br",
