Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -15,7 +15,7 @@
   "currency": "BRL",
   "mini_logo": "",
   "font_family": "Open Sans",
-  "favicon": "/img/uploads/favicon-1-.png",
+  "favicon": "/img/uploads/frame-2-1-.png",
   "icons_font": "line-awesome",
   "country_code": "BR",
   "secondary_color": "#4f4f4f",
