--- a/content/settings.json
+++ b/content/settings.json
@@ -22,5 +22,5 @@
   "icon": "/img/uploads/icone-do-app.png",
   "store_id": 19130,
   "description": "A PlazaPremier® Technology é uma das maiores especializadas em produtos Apple do país, onde você encontra todos os lançamentos e a linha completa de produtos Apple.  Devido, principalmente, a um novo sistema de logística a Plaza Premier é capaz de criar ofertas mais competitivas e atrativas, tornando produtos de alto padrão mais acessíveis ao bolso do brasileiro.",
-  "large_icon": "/img/uploads/icone-grande-1-.png"
+  "large_icon": "/img/uploads/frame-2-1-.png"
 }
