Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-222-1-.svg",
-  "name": "Plaza Premier",
+  "name": "Mac Premier",
   "short_name": "MacPremier Lite",
   "lang": "pt_br",
   "currency": "BRL",
