--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "_",
     "custom": "_"
   },
-  "bg_color": "#ffffff",
+  "bg_color": "#f8f8f8",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-222-1-.svg",
   "name": "Mac Premier",
