--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#f8f8f8",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-222-1-.svg",
+  "logo": "/img/uploads/900-x-232.svg",
   "name": "Mac Premier",
   "short_name": "Mac Premier Lite",
   "lang": "pt_br",
