--- a/content/settings.json
+++ b/content/settings.json
@@ -14,7 +14,7 @@
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "font_family": "Open Sans",
+  "font_family": "_",
   "favicon": "/img/uploads/frame-2-1-.png",
   "icons_font": "line-awesome",
   "country_code": "BR",
