--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "#4f4f4f",
   "icon": "/img/uploads/frame-4-1-.svg",
   "store_id": 19130,
-  "description": "Estritamente especializada em produtos Apple, a MacPremier é capaz de oferecer preços ainda mais competitivos para que seus clientes possam colher os benefícios das compras online. A MacPremier é uma ascendente empresa do varejo brasileiro. Graças, principalmente, a um diferenciado sistema de logística somos capazes de oferecer os mais competitivos preços do mercado.",
+  "description": "Estritamente especializada em produtos Apple, a MacPremier é capaz de oferecer preços ainda mais competitivos para que seus clientes possam colher os benefícios das compras online. A MacPremier é uma ascendente empresa do varejo brasileiro. Graças, principalmente, a um diferenciado e inovador sistema de logística somos capazes de oferecer os mais competitivos preços do mercado.",
   "large_icon": "/img/uploads/frame-20.svg"
 }
