Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#5170aa",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-251-2-.svg",
-  "name": "MacPremier®",
+  "name": "MacPremier (Brasil)",
   "short_name": "MacPremier® Lite",
   "lang": "pt_br",
   "currency": "BRL",
