--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#5170aa",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-260-1-.png",
+  "logo": "/img/uploads/900-x-260.png",
   "name": "MacPremier (Brasil)",
   "short_name": "MacPremier® Lite",
   "lang": "pt_br",
