Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -10,7 +10,7 @@
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-267.png",
   "name": "MacPremier (Brasil)",
-  "short_name": "MacPremier Lite",
+  "short_name": "MacPremier (Brasil)",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
