--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-267.png",
+  "logo": "/img/uploads/900-x-265-8-.png",
   "name": "MacPremier (Brasil)",
   "short_name": "MacPremier (Brasil)",
   "lang": "pt_br",
@@ -22,5 +22,5 @@
   "icon": "/img/uploads/frame-4-1-.svg",
   "store_id": 19130,
   "description": "Estritamente especializada em produtos Apple, a MacPremier é capaz de oferecer preços ainda mais competitivos para que seus clientes possam colher os benefícios das compras online. A MacPremier é uma ascendente empresa do varejo brasileiro. Graças, principalmente, a um diferenciado e inovador sistema de logística somos capazes de oferecer os mais competitivos preços do mercado.",
-  "large_icon": "/img/uploads/frame-20.svg"
+  "large_icon": "/img/uploads/900-x-267.png"
 }
