--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-268.png",
+  "logo": "/img/uploads/900-x-268-2-.png",
   "name": "MacPremier (Brasil)",
   "short_name": "MacPremier (Brasil)",
   "lang": "pt_br",
