Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,8 +9,8 @@
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
   "logo": "/img/uploads/900-x-273-1-.png",
-  "name": "MacPremier (Brasil)",
-  "short_name": "MacPremier (Brasil)",
+  "name": "MacPremier",
+  "short_name": "MacPremier",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
