--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "ecomplus-stores/joaovictor",
-  "logo": "/img/uploads/900-x-273-1-.png",
+  "logo": "/img/uploads/900-x-273.svg",
   "name": "MacPremier",
   "short_name": "MacPremier",
   "lang": "pt_br",
